--- a/HLPDialog/en.lproj/Localizable.strings
+++ b/HLPDialog/en.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 
 "checkNetworkConnection" = "Check network connection";
 
-"DialogSearch" = "Search with dialog";
+"DialogSearch" = "Voice search";
 
 "DialogStart" = "Restart";
 
