--- a/HLPDialog/ja.lproj/Localizable.strings
+++ b/HLPDialog/ja.lproj/Localizable.strings
@@ -56,3 +56,5 @@
 
 "unknownError0" = "音声認識を開始できませんでした。もう一度お試しください";
 "unknownError1" = "現在、音声認識を行うことが出来ません。あとでもう一度お試しください";
+
+"serverConnectionError" = "一時的にサーバーに接続できませんでした";
