--- a/HLPDialog/Ar.lproj/Localizable.strings
+++ b/HLPDialog/Ar.lproj/Localizable.strings
@@ -34,7 +34,7 @@
 
 "Error" = "خطأ";
 
-"CANCEL" = "يلغي";
+"CANCEL" = "إلغاء";
 "SETTING" = "أفتح الإعدادات";
 
 "WAIT_ACTION" = "في انتظار سؤالك. اضغط على زر الميكروفون لإعادة التشغيل.";
